--- a/get-away-from-ucas.html
+++ b/get-away-from-ucas.html
@@ -147,7 +147,7 @@
       </div>
       <div class="info">
         <div class="info-title">出校时间</div>
-        <b><font size=4><div class="info-text" id="time">2020-09-06 09:16</div></font></b>
+        <b><font size=4><div class="info-text" id="time">{{curDateTime()}}</div></font></b>
       </div>
       <div class="info">
         <div class="info-title">通行码</div>
