--- a/get-away-from-ucas.html
+++ b/get-away-from-ucas.html
@@ -123,13 +123,13 @@
 	</style>
 </head>
 <body class="vsc-initialized">
-  <div class="input-box" id="input-box" style="text-align: center;">
+<!--   <div class="input-box" id="input-box" style="text-align: center;">
     <p style="font-size: 3rem;">反复横跳！</p>
     <div>你的名字：<input type="text" name="" id="input-name" placeholder="李想" field_signature="246837635" form_signature="8404015848584033285"></div>
     <div>你的学号：<input type="text" name="" id="input-number" placeholder="2020E8013282069" field_signature="1852501389" form_signature="8404015848584033285"></div>
-    <div><button onclick="Enter(0)">“放我出去吧”</button></div>
+    <div><button onclick="Enter(0)">“放我出去吧”</button></div> -->
   </div>
-	<div class="content" id="content" style="display: none;">
+	<div class="content" id="content" style="">
 		<div class="up">
 			<div class="up-text">申请表单</div>
 		</div>
