--- a/get-away-from-ucas.html
+++ b/get-away-from-ucas.html
@@ -191,6 +191,7 @@
       return curDateTime;
     };
     curTime = curDateTime();
+    document.getElementById("time").innerHTML = curTime;
     
     function Enter(e) {
       console.log(e)
