fix: get-away-from-ucas-lcy

--- a/get-away-from-ucas-lcy.html
+++ b/get-away-from-ucas-lcy.html
@@ -135,7 +135,7 @@
 			<div class="up-text">申请表单</div>
 		</div>
 		<div class="topic">
-      <div class="topic-text"><img src="./出校信息表_files/04d93329ad7c7ab4.png">行程管理</div>
+      <div class="topic-text"><img src="./04d93329ad7c7ab4.png">行程管理</div>
     </div>
     <div class="infos">
       <div class="info">
@@ -152,7 +152,7 @@
       </div>
       <div class="info">
         <div class="info-title">通行码</div>
-        <div class="QR-code"><img src="./出校信息表_files/greencode.png"></div>
+        <div class="QR-code"><img src="./greencode.png"></div>
       </div>
     </div>
   </div>
