--- a/get-away-from-ucas.html
+++ b/get-away-from-ucas.html
@@ -147,8 +147,8 @@
       </div>
       <div class="info">
         <div class="info-title">出校时间</div>
-<!--         <b><font size=4><div class="info-text" id="time">{{curDateTime()}}</div></font></b> -->
-	<text class="time">{{curDateTime()}}</text>
+        <b><font size=4><div class="info-text" id="time">{{curDateTime()}}</div></font></b>
+<!-- 	<text class="time">{{curDateTime()}}</text> -->
       </div>
       <div class="info">
         <div class="info-title">通行码</div>
